@@ -1,5 +1,5 @@
 #ifndef lint
-static const char	RCSid[] = "$Id: netproc.c,v 2.13 2003/11/10 16:52:24 greg Exp $";
+static const char	RCSid[] = "$Id: netproc.c,v 2.14 2003/11/11 16:24:06 greg Exp $";
 #endif
 /*
  * Parallel network process handling routines
@@ -172,7 +172,7 @@ int	(*compf)();
 		exit(1);
 	}
 					/* start child process */
-	if ((pid = vfork()) == 0) {
+	if ((pid = fork()) == 0) {
 		close(pfd[0]);			/* connect stderr to pipe */
 		if (pfd[1] != 2) {
 			dup2(pfd[1], 2);
